[package]
name = "mot_new"
version = "0.1.0"
authors = ["Waelwindows <waelwindwos@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.24"
diva_db = { path = "../diva_db" }
phf = { version="0.8.0", features=["macros"] }
tracing = { version = "0.1.25", optional = true }

[dev-dependencies]
nom = "5.1.2"
