[package]
name = "mot_new"
version = "0.1.0"
authors = ["Waelwindows <waelwindwos@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mot"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["rlib", "cdylib"]
[dependencies]
thiserror = "1.0.24"
diva_db = { path = "../diva_db" }
phf = { version="0.8.0", features=["macros"] }
tracing = { version = "0.1.25", optional = true }
pyo3 = { version = "0.13.2", optional = true }
nom = "5.1.2"
